{
    "name": "InputSystem",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "e335ff2e-9345-4f42-b83a-517aaad8794e",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "df99dc1f-dc65-4bca-b26c-3065a76b1b35",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomTouch",
                    "type": "Value",
                    "id": "4ec4dcb5-1e6b-4fcd-887c-6de479fa67e7",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchCount",
                    "type": "Button",
                    "id": "df87f0cc-e899-4ab2-a6dc-a12294f9277c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryTouchDelta",
                    "type": "Value",
                    "id": "33266a68-1a12-4d60-a10b-f23d310c2137",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d43febcb-efd2-48e5-aa3a-6107fcc18542",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touthscreen",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90d993a6-8a35-42be-843c-f7f4163138db",
                    "path": "<Touchscreen>/touch1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a583e190-3166-4c66-9da2-11173bc4aa49",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touthscreen",
                    "action": "TouchCount",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce80bd69-cbba-4185-8ab0-a06a1aef744f",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touthscreen",
            "bindingGroup": "Touthscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}